# copilot-openai-api

./: main.py  pyproject.toml
.run/: main.run.xml
