[project]
name = "copilot-openai-api"
version = "0.1.1"
description = "Default template for PDM package"
authors = [
    {name = "Hanchin Hsieh", email = "me@yuchanns.xyz"},
]
dependencies = ["fastapi", "httpx", "aiofiles", "uvicorn", "watchfiles"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "Apache"}

[tool.pdm.scripts]
dev = "python run.py --reload"
lint = "ruff check --fix ."
format = "ruff format ."

[tool.pdm]
distribution = false

[tool.pyright]
venvPath = "."
venv = ".venv"
reportMissingModuleSource = false

[dependency-groups]
dev = [
    "ruff>=0.11.4",
    "pdm"
]
